--- a/happstack-authenticate.cabal
+++ b/happstack-authenticate.cabal
@@ -54,3 +54,21 @@ Library
                        unordered-containers         == 0.2.*,
                        web-routes                   >= 0.26 && < 0.28,
                        web-routes-happstack         == 0.23.*
+
+Executable             happstack-authenticate-migrate
+  buildable:           False
+  main-is:             Main.hs
+  ghc-options:         -threaded -O2 -with-rtsopts=-I0
+  build-depends:       base                     >  4   && <  5,
+                       acid-state               >= 0.6 && <= 0.13,
+                       happstack-authenticate   >= 2.0 && <  2.1,
+                       text                     < 1.3,
+                       authenticate             < 1.4,
+                       time,
+                       fb,
+                       containers,
+                       bytestring,
+                       ixset,
+                       mtl,
+                       pwstore-purehaskell,
+                       safecopy
