--- a/happstack-authenticate.cabal
+++ b/happstack-authenticate.cabal
@@ -12,12 +12,14 @@ Category:            Web
 Build-type:          Simple
 Cabal-version:       >=1.6
 
-
 source-repository head
     type:     darcs
     subdir:   happstack-authenticate
     location: http://hub.darcs.net/stepcut/happstack
 
+Flag migrate
+ Description: Enable migration tool. Depends on happstack-authenticate >= 2.0
+ Default:     False
 
 Library
   Exposed-modules:     Happstack.Auth
@@ -56,19 +58,22 @@ Library
                        web-routes-happstack         == 0.23.*
 
 Executable             happstack-authenticate-migrate
-  buildable:           False
   main-is:             Migrate.hs
-  ghc-options:         -threaded -O2 -with-rtsopts=-I0
-  build-depends:       base                     >  4   && <  5,
-                       acid-state               >= 0.6 && <= 0.13,
-                       happstack-authenticate   >= 2.0 && <  2.1,
-                       text                     < 1.3,
-                       authenticate             < 1.4,
-                       time,
-                       fb,
-                       containers,
-                       bytestring,
-                       ixset,
-                       mtl,
-                       pwstore-purehaskell,
-                       safecopy
+  if flag(migrate)
+   buildable:           True
+   ghc-options:         -threaded -O2 -with-rtsopts=-I0
+   build-depends:       base                     >  4   && <  5,
+                        acid-state               >= 0.6 && <= 0.13,
+                        happstack-authenticate   >= 2.0 && <  2.1,
+                        text                     < 1.3,
+                        authenticate             < 1.4,
+                        time,
+                        fb,
+                        containers,
+                        bytestring,
+                        ixset,
+                        mtl,
+                        pwstore-purehaskell,
+                        safecopy
+  else
+   buildable:           False
