--- a/happstack-authenticate.cabal
+++ b/happstack-authenticate.cabal
@@ -1,5 +1,5 @@
 Name:                happstack-authenticate
-Version:             0.10.20
+Version:             0.11.1
 Synopsis:            Happstack Authentication Library
 Description:         A themeable authentication library with support for username+password and OpenId.
 Homepage:            http://www.happstack.com/
@@ -54,6 +54,7 @@ Library
                        reform-blaze                 == 0.2.*,
                        reform-happstack             == 0.2.*,
                        unordered-containers         == 0.2.*,
+                       userid,
                        web-routes                   >= 0.26 && < 0.28,
                        web-routes-happstack         == 0.23.*
 
