--- a/happstack-auth.cabal
+++ b/happstack-auth.cabal
@@ -36,9 +36,8 @@ Library
                        containers                   >= 0.4 && < 0.6,
                        ixset                        >= 1.0 && < 1.1,
                        happstack-server             >= 6.0 && < 7.6,
-                       http-conduit                 >= 1.4 && < 2.2,
+                       http-conduit                 >= 1.4,
                        http-types                   >= 0.6 && < 0.10,
-                       fb                           >= 0.13 && < 1.1,
                        safecopy                     >= 0.6,
                        mtl                          >= 2.0,
                        pwstore-purehaskell          == 2.1.*,
@@ -64,7 +63,6 @@ Executable             happstack-authenticate-migrate
                         text                     < 1.3,
                         authenticate             < 1.4,
                         time,
-                        fb,
                         containers,
                         bytestring,
                         ixset,
