--- a/happstack-auth.cabal
+++ b/happstack-auth.cabal
@@ -29,15 +29,15 @@ Library
 
   Build-depends:       base                         > 4 && < 5,
                        acid-state                   >= 0.6 && <= 0.16,
-                       aeson                        >= 0.4 && < 0.12,
+                       aeson                        >= 0.4,
                        authenticate                 == 1.3.*,
-                       blaze-html                   >= 0.5 && < 0.9,
+                       blaze-html                   >= 0.5,
                        bytestring                   >= 0.9 && < 0.11,
                        containers                   >= 0.4 && < 0.6,
                        ixset                        >= 1.0 && < 1.1,
                        happstack-server             >= 6.0 && < 7.6,
                        http-conduit                 >= 1.4,
-                       http-types                   >= 0.6 && < 0.10,
+                       http-types                   >= 0.6,
                        safecopy                     >= 0.6,
                        mtl                          >= 2.0,
                        pwstore-purehaskell          == 2.1.*,
